# kado

./: README.markdown  index.html  kado.opam
.github/workflows/: ocaml.yml
kado/: index.html
kado/Kado/: index.html
kado/Kado/Builder/: index.html
kado/Kado/Builder/Endo/: index.html
kado/Kado/Builder/Endo/Make/: index.html
kado/Kado/Builder/Endo/module-type-Param/: index.html
kado/Kado/Builder/Endo/module-type-S/: index.html
kado/Kado/Builder/Free/: index.html
kado/Kado/Builder/Free/Make/: index.html
kado/Kado/Builder/Free/module-type-Param/: index.html
kado/Kado/Builder/Free/module-type-S/: index.html
kado/Kado/Syntax/: index.html
kado/Kado/Syntax/Endo/: index.html
kado/Kado/Syntax/Free/: index.html
kado/Kado/Theory/: index.html
kado/Kado/Theory/Make/: index.html
kado/Kado/Theory/Make/Alg/: index.html
kado/Kado/Theory/Make/Disj/: index.html
kado/Kado/Theory/Make/argument-1-P/: index.html
kado/Kado/Theory/Make/argument-1-Param/: index.html
kado/Kado/Theory/module-type-Param/: index.html
kado/Kado/Theory/module-type-S/: index.html
kado/Kado/Theory/module-type-S/Alg/: index.html
kado/Kado/Theory/module-type-S/Disj/: index.html
kado/Kado/Theory/module-type-S/Param/: index.html
src/: Builder.ml  Builder.mli  BuilderFun.ml  BuilderFun.mli  Cof.ml  Cof.mli  CofFun.ml  CofFun.mli  CofThy.ml  CofThy.mli  DisjointSet.ml  DisjointSet.mli  Graph.ml  Graph.mli  Kado.ml  Kado.mli  Kusariyarou.ml  Kusariyarou.mli  Preorder.ml  Preorder.mli  Syntax.ml  Syntax.mli  Theory.ml  Theory.mli  dune
test/: Test.ml  TestGraph.ml  dune
(+6 files in other folders)
