opam-version: "2.0"
name: "kado"
synopsis: "Cofibrations in Cartecian Cubical Type Theory"
description: """
Cofibrations in Cartecian cubical type theory as described in the paper 'Syntax and models of Cartesian cubical type theory'
"""
maintainer: "favonia <favonia@gmail.com>"
authors: "The RedPRL Development Team"
license: "Apache-2.0"
homepage: "https://github.com/RedPRL/kado"
bug-reports: "https://github.com/RedPRL/kado/issues"
dev-repo: "git+https://github.com/RedPRL/kado.git"
depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "4.10"}
  "bwd" {>= "1.0"}
  "kusariyarou"
  "odoc" {with-doc}
]
pin-depends: [
  [ "kusariyarou.~dev" "git+https://github.com/jonsterling/kusariyarou#union" ]
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
